--- a/.classpath
+++ b/.classpath
@@ -19,10 +19,10 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/jetbrick-framework"/>
 	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/jaxen-1.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-1.7.5-logback-1.0.11.jar"/>
-	<classpathentry kind="lib" path="lib/apache-commons-20130331.all.jar"/>
 	<classpathentry kind="lib" path="lib/fastjson-1.1.23.jar"/>
 	<classpathentry kind="lib" path="lib/httl-1.0.11.jar"/>
+	<classpathentry kind="lib" path="lib/apache-commons-20130912.all.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-1.7.5-logback-1.0.11-all.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
