--- a/.classpath
+++ b/.classpath
@@ -22,6 +22,7 @@
 	<classpathentry kind="lib" path="lib/apache-commons-20130912.all.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-1.7.5-logback-1.0.11-all.jar"/>
 	<classpathentry kind="lib" path="lib/jetbrick-template-1.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-runtime-4.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
